--- a/nebinance/package.json
+++ b/nebinance/package.json
@@ -12,8 +12,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
