--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "classnames": "^2.3.2",
     "node-sass": "^7.0.3",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
+    "react-router": "^6.5.0",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
@@ -49,6 +49,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
